--- a/wp-content/themes/twentytwentyfour-child/style.css
+++ b/wp-content/themes/twentytwentyfour-child/style.css
@@ -11,3 +11,7 @@ License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Tags:         one-column, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, block-patterns, rtl-language-support, sticky-post, threaded-comments, translation-ready, wide-blocks, block-styles, style-variations, accessibility-ready, blog, portfolio, news
 Text Domain:  twentytwentyfourchild
 */
+
+.wp-block-column.is-team-figure {
+    text-align: center;
+}
