Hide gift card banner at checkout

--- a/wp-content/themes/cvac/style.css
+++ b/wp-content/themes/cvac/style.css
@@ -57,3 +57,8 @@ ul.wp-block-navigation {
 .grecaptcha-badge {
     display: none;
 }
+
+/* Hide gift card banner at checkout */
+.ywgc_have_code{
+    display: none;
+  }
